Update default editor

--- a/public/scripts/views/save-restore-dialog.html
+++ b/public/scripts/views/save-restore-dialog.html
@@ -17,7 +17,7 @@
     <!-- campo importe -->
     <div class="form-group" ng-class="{ 'has-error': changePartidaForm.importe.$invalid && changePartidaForm.importe.$dirty }">
         <label for="importe" class="label-control"><b>Current Source Code:</b></label>
-        <textarea ng-model="partida.importe" rows="2" msd-elastic
+        <textarea ng-model="partida.importe" rows="20" 
           name="importe" id="importe" class="form-control" required 
           style="max-height: 300px;"
           class="form-control"></textarea>
