--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -843,3 +843,12 @@ html,body{
 .ng-spotlight.ng-spotlight-overlay {
   position: fixed !important;
 }
+/*
+.ng-spotlight-overlay {
+}
+.ng-spotlight-results-panel,
+*/
+.ng-spotlight-results-detail,
+.ng-spotlight-results-list {
+  height: 444px !important;
+}
