--- a/public/scripts/views/notebook-view.html
+++ b/public/scripts/views/notebook-view.html
@@ -53,23 +53,23 @@
                 <div class="container">
                     <div class="btn-toolbar">
                         <div class="btn-group">
-                          <button data-toggle="ng-spotlight" title="Search" class="btn"><i class="fa fa-search"></i></button>
-                          <button ng-click="openHelp()" title="Shortcuts Help" class="btn"><i class="fa fa-keyboard-o"></i></button>
+                          <button data-toggle="ng-spotlight" title="Search  (Cmd+Shift+Space)" class="btn"><i class="fa fa-search"></i></button>
+                          <button ng-click="openHelp()" title="Shortcuts Help (?)" class="btn"><i class="fa fa-keyboard-o"></i></button>
                         </div>
                         <div class="btn-group"><button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
                         <div class="btn-group">
                           <button ng-click="downloadDoc()" class="btn" title="Download Notebook Source"><i class="fa fa-download"></i></button>
-                          <button ng-click="printDoc()" title="Print Notebook" class="btn"><i class="fa fa-print"></i></button>
+                          <button ng-click="printDoc()" title="Print Notebook (Cmd+p)" class="btn"><i class="fa fa-print"></i></button>
                         </div>
                         <div class="btn-group">
-                          <button ng-click="cutRow()" title="Cut Selected Row" class="btn"><i class="fa fa-cut"></i></button>
-                          <button ng-click="copyRow()" class="btn" title="Copy Selected Row"><i class="fa fa-files-o"></i></button>
-                          <button ng-click="pasteRow()" class="btn" title="Paste Selected Row"><i class="fa fa-paste"></i></button>
+                          <button ng-click="cutRow()" title="Cut Selected Row (Cmd+Shift+x)" class="btn"><i class="fa fa-cut"></i></button>
+                          <button ng-click="copyRow()" class="btn" title="Copy Selected Row (Cmd+Shift+c)"><i class="fa fa-files-o"></i></button>
+                          <button ng-click="pasteRow()" class="btn" title="Paste Selected Row (Cmd+Shift+v)"><i class="fa fa-paste"></i></button>
                           <button ng-click="removeRow()" class="btn" title="Remove Selected Row"><i class="fa fa-trash"></i></button>
                         </div>
                         <div class="btn-group">
-                          <button ng-click="moveRow('up')" title="Move Up Selected Row" class="btn"><i class="fa fa-arrow-up"></i></button>
-                          <button ng-click="moveRow('down')" title="Move Down Selected Row" class="btn"><i class="fa fa-arrow-down"></i></button>
+                          <button ng-click="moveRow('up')" title="Move Up Selected Row (Cmd+Shift+Up)" class="btn"><i class="fa fa-arrow-up"></i></button>
+                          <button ng-click="moveRow('down')" title="Move Down Selected Row (Cmd+Shift+Down)" class="btn"><i class="fa fa-arrow-down"></i></button>
                         </div>
                         <div class="btn-group">
                             <div style="margin-bottom: 0;" class="form-item form-item-node-type form-type-select form-group"><select
@@ -79,7 +79,7 @@
                                     <option value="code">Code</option>
                                 </select></div>
                         </div>
-                        <div class="btn-group"><button ng-click="addRow()" title="Create New Row" class="btn"><i class="fa fa-plus"></i></button></div>
+                        <div class="btn-group"><button ng-click="addRow()" title="Create New Row (Cmd+Shift+a)" class="btn"><i class="fa fa-plus"></i></button></div>
                         <div class="btn-group"><button disabled class="btn">{{selected}}</button></div>
                         <div class="btn-group">
 
