--- a/public/scripts/views/notebook-view.html
+++ b/public/scripts/views/notebook-view.html
@@ -34,8 +34,8 @@
             </div>
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
-                    <li><a href="javascript:" ng-click="createNew()">Create New</a></li>
-                    <li><a href="javascript:" ng-click="loadNotebook()">Quick Start</a></li>
+                    <li><a href="javascript:" ng-click="createNew()" class="nb-action-top-btn primary">Create New</a></li>
+                    <li><a href="javascript:" ng-click="loadQuickStart()" class="nb-action-top-btn secondary">Quick Start</a></li>
                     <li style="margin-right: 20px;">
                       <a href="https://github.com/cortezcristian/jsnotebook2" target="_blank" style="padding: 10px 0 0 0;">
                         <span style="display:inline-block">
