--- a/public/scripts/views/notebook-view.html
+++ b/public/scripts/views/notebook-view.html
@@ -53,7 +53,7 @@
                 <div class="container">
                     <div class="btn-toolbar">
                         <div class="btn-group">
-                          <button data-toggle="ng-spotlight" title="Search  (Cmd+Shift+Space)" class="btn"><i class="fa fa-search"></i></button>
+                          <button data-toggle="ng-spotlight" title="Search Notebooks (Cmd+Shift+Space)" class="btn"><i class="fa fa-search"></i></button>
                           <button ng-click="openHelp()" title="Shortcuts Help (?)" class="btn"><i class="fa fa-keyboard-o"></i></button>
                         </div>
                         <div class="btn-group"><button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
