Go to external notebook

--- a/public/scripts/views/smartrow-markdown.html
+++ b/public/scripts/views/smartrow-markdown.html
@@ -4,6 +4,7 @@
   </div>
   <div ng-show="rowmodel.editing || rowmodel.content == ''">
     <textarea ng-model="rowmodel.content" rows="2" msd-elastic
+      autocomplete="nope"
       ng-disabled="!rowmodel.editing"
       class="form-control"></textarea>
   </div>
