--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -827,17 +827,21 @@ html,body{
 	color: red;
 }
 
+
 .video-edition i.fa-pencil { visibility: hidden; }
+.externalnotebook-edition i.fa-pencil { visibility: hidden; }
 .title-edition i {
   display: none;
 }
 
 .video-edition:hover i.fa-pencil { visibility: visible }
+.externalnotebook-edition:hover i.fa-pencil { visibility: visible }
 .title-edition:hover i {
   display: inline-block;
 }
 
 .video-edition:hover,
+.externalnotebook-edition:hover,
 .title-edition:hover {
   pointer: cursor;
 }
