--- a/public/scripts/views/notebook-view.html
+++ b/public/scripts/views/notebook-view.html
@@ -57,7 +57,7 @@
                           <button ng-click="openHelp()" title="Shortcuts Help (?)" class="btn"><i class="fa fa-keyboard-o"></i></button>
                         </div>
                         <div class="btn-group">
-                          <button ng-click="openSaveAndRestore()" title="Load from URL" class="btn"><i class="fa fa-globe"></i></button>
+                          <button ng-click="openSaveAndRestore()" title="Load from URL" class="btn hide"><i class="fa fa-globe"></i></button>
                           <button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button>
                         </div>
                         <div class="btn-group">
@@ -106,6 +106,26 @@
                         </div>
                         <div class="btn-group"><button ng-click="openVideoMilestones()" title="Video Config" class="btn"><i class="fa fa-youtube-play"></i></button></div>
                         <div class="btn-group"><button disabled class="btn">{{videoCurrentTime}}s</button></div>
+                        <div class="btn-group">
+
+                          <span style="color:#000;display: inline-block;padding: 0px;font-size: 14px; height: 35px; padding: 8px 5px 0 5px;" class="navbar-brand externalnotebook-edition">
+                            <i class="fa fa-globe"></i>
+                            <span style="display:inline-block;" ng-show='!editingExternalNotebook' ng-click="editExternalNotebook(true)">
+                              {{notebook.externalnotebook.url === "" ? " Load Notebook URL" : notebook.externalnotebook.msg}}
+                            </span>
+                            <i class="fa fa-pencil" ng-click="editExternalNotebook(true)" ng-show="!editingExternalNotebook"></i>
+                          </span>
+                          <div class="input-group" ng-show='editingExternalNotebook' style="padding-right: 30px;">
+                            <input type="text" class="form-control"
+                              placeholder="Paste external Notebook URL"
+                              ng-model="notebook.externalnotebook.url" ng-trim ng-keydown="changeExternalNotebook($event)" />
+                            <div class="input-group-append" style="display: flex;">
+                              <button class="btn btn-outline-secondary" type="button" ng-click="gotoExternalNotebook(false)" style="border: 1px solid #bab8b8 !important;">
+                                GO
+                              </button>
+                            </div>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
