--- a/public/scripts/views/notebook-view.html
+++ b/public/scripts/views/notebook-view.html
@@ -157,7 +157,7 @@
         <div class="col-sm-12 col-md-12">
             <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;">
               <i style="padding-right:10px" class="fa fa-book"></i>
-              jsnotebook with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
+              jsnotebook {{version}} with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
             </p>
         </div>
     </div>
