--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,10 @@ body .con-toolbar{
   border-bottom:1px solid #d3d3d3;
 }
 body .con-toolbar > .container{
-  padding-top:4px
+  padding-top: 4px;
+  /* Fix FF */
+  padding-right: 0;
+  padding-left: 0;
 }
 body .con-toolbar .fa{
   font-size:16px
@@ -885,4 +888,52 @@ html,body{
 
 .nb-action-top-btn.secondary {
   border: 1px solid transparent;
+}
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+
+}
+
+/*==================================================
+=            Bootstrap 3 Media Queries             =
+==================================================*/
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+  .collapse-handler-con { display: none; }
+}
+
+/*==========  Non-Mobile First Method  ==========*/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  .notebook-word { display: none !important; }
 }
