--- a/scripts/views/notebook-view.html
+++ b/scripts/views/notebook-view.html
@@ -14,8 +14,8 @@
             <span style="display: inline-block;background-color:#000;color:#fff;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
                 <i class="ion-social-javascript" style="font-size:30px"></i>
             </span>
-              <a href="/" style="color:#000; margin-left: 22px;border-right: 1px solid #eae9e9;background: #f7f7f7;box-shadow: 10px 0px 100px #ccc;" class="navbar-brand">
-                <span style="display:inline-block;padding-left:5px;font-size: 22px;">Notebook</span>
+              <a href="/#/" style="color:#000; margin-left: 22px;border-right: 1px solid #eae9e9;background: #f7f7f7;box-shadow: 10px 0px 100px #ccc;" class="navbar-brand">
+                <span class="notebook-word" style="display:inline-block;padding-left:5px;font-size: 22px;">Notebook</span>
               </a>
               <span style="color:#000; margin-left: 22px;" class="navbar-brand title-edition">
                 <span style="display:inline-block; padding-left: 22px;" ng-show='!editingTitle' ng-click="editTitle(true)">
@@ -56,11 +56,12 @@
                           <button data-toggle="ng-spotlight" title="Search Notebooks (Cmd+Shift+Space)" class="btn"><i class="fa fa-search"></i></button>
                           <button ng-click="openHelp()" title="Shortcuts Help (?)" class="btn"><i class="fa fa-keyboard-o"></i></button>
                         </div>
-                        <div class="btn-group">
+                        <div class="btn-group" ng-show="menu_collapsed">
                           <button ng-click="openSaveAndRestore()" title="Load from URL" class="btn hide"><i class="fa fa-globe"></i></button>
                           <button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button>
                         </div>
                         <div class="btn-group">
+                          <button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn hide"><i class="fa fa-floppy-o"></i></button>
                           <button ng-click="downloadDoc()" class="btn" title="Download Notebook Source"><i class="fa fa-download"></i></button>
                           <button ng-click="printDoc()" title="Print Notebook (Cmd+p)" class="btn"><i class="fa fa-print"></i></button>
                         </div>
@@ -84,7 +85,7 @@
                         </div>
                         <div class="btn-group"><button ng-click="addRow()" title="Create New Row (Cmd+Shift+a)" class="btn"><i class="fa fa-plus"></i></button></div>
                         <div class="btn-group"><button disabled class="btn">{{selected}}</button></div>
-                        <div class="btn-group">
+                        <div class="btn-group" ng-show="menu_collapsed">
 
                           <span style="color:#000;display: inline-block;padding: 0px;font-size: 14px; height: 35px; padding: 8px 5px 0 5px;" class="navbar-brand video-edition">
                             <i class="fa fa-youtube-square"></i>
@@ -104,9 +105,12 @@
                             </div>
                           </div>
                         </div>
-                        <div class="btn-group"><button ng-click="openVideoMilestones()" title="Video Config" class="btn"><i class="fa fa-youtube-play"></i></button></div>
-                        <div class="btn-group"><button disabled class="btn">{{videoCurrentTime}}s</button></div>
-                        <div class="btn-group">
+                        <div class="btn-group" ng-show="menu_collapsed"><button ng-click="openVideoMilestones()" title="Video Config" class="btn"><i class="fa fa-youtube-play"></i></button></div>
+                        <div class="btn-group" ng-show="menu_collapsed"><button disabled class="btn">{{videoCurrentTime}}s</button></div>
+                        <div class="btn-group hide">
+                          <button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button>
+                        </div>
+                        <div class="btn-group" ng-show="menu_collapsed">
 
                           <span style="color:#000;display: inline-block;padding: 0px;font-size: 14px; height: 35px; padding: 8px 5px 0 5px;" class="navbar-brand externalnotebook-edition">
                             <i class="fa fa-globe"></i>
@@ -125,6 +129,11 @@
                               </button>
                             </div>
                           </div>
+                        </div>
+                        <div class="btn-group collapse-handler-con">
+                          <button ng-click="toggleOptions()" title="Show {{!menu_collapsed?'More':'Less'}} Options" class="btn">
+                            <i ng-class="{ 'ion-chevron-left': menu_collapsed, 'ion-chevron-right': !menu_collapsed }"></i>
+                          </button>
                         </div>
                     </div>
                 </div>
@@ -148,7 +157,7 @@
         <div class="col-sm-12 col-md-12">
             <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;">
               <i style="padding-right:10px" class="fa fa-book"></i>
-              jsnotebook with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
+              jsnotebook {{version}} with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
             </p>
         </div>
     </div>
