--- a/scripts/views/notebook-view.html
+++ b/scripts/views/notebook-view.html
@@ -81,6 +81,7 @@
                                     <option value="markdown">Markdown</option>
                                     <option value="formula">Mathjax</option>
                                     <option value="code">Code</option>
+                                    <option value="plantuml">Plantuml</option>
                                 </select></div>
                         </div>
                         <div class="btn-group"><button ng-click="addRow()" title="Create New Row (Cmd+Shift+a)" class="btn"><i class="fa fa-plus"></i></button></div>
